--- a/css/style.css
+++ b/css/style.css
@@ -31,4 +31,21 @@ img{
 h1{
     color: #eee;
     font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    text-align: center;
+}
+
+.results{
+    color: #eee;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    text-align: center;
+    visibility: hidden;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
